--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
         <div class="row intro-content">
 
             <div class="column large-9 mob-full intro-text">
-                <h3>Hello, I'm Wings Davis</h3>
+                <h3>Hello, I'm Kofi Abban Davis</h3>
+                <h4>Wings Davis</h4>
                 <h1>
                     Programmer <br>
                     and Pentration Tester <br>
