--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
         <div class="row intro-content">
 
             <div class="column large-9 mob-full intro-text">
-                <h3>Hello, I'm Kofi Abban Davis</h3>
-                <h4>Wings Davis</h4>
+                <h3>Hello,<br> I'm Kofi Abban Davis</h3>
                 <h1>
                     Programmer <br>
                     and Pentration Tester <br>
