--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                 <h3>Hello, I'm<br> -> Kofi Abban Davis</h3>
                 <h1>
                     Programmer <br>
-                    and Pentration Tester <br>
-                    Based In Somewhere.
+                    and Penetration Tester <br>
+                    Based Somewhere.....
                 </h1>
             </div>
 
