--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 
             <div class="column large-9 mob-full intro-text">
                 <h3>Hello, I'm<br> -> Kofi Abban Davis</h3>
+                <h3>Some call me<br> -> Wings</h3>
                 <h1>
                     Programmer <br>
                     and Penetration Tester <br>
