--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                         <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
                         <cite class="testimonials__cite">
                             <strong>Ernest Abeiku-Gyedu</strong>
-                            <span>Software Engineer</span>
+                            <span>Developer</span>
                         </cite>
                     </div>
                 </div> <!-- end testimonials__slide -->
@@ -531,7 +531,7 @@
                     <div class="testimonials__info">
                         <img src="images/avatars/user-04.jpg" alt="Author image" class="testimonials__avatar">
                         <cite class="testimonials__cite">
-                            <strong>Ransford Gorh</strong>
+                            <strong>Gideon Appau</strong>
                             <span>Javascript Developer</span>
                         </cite>
                     </div>
